--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -158,6 +158,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: vcpkg cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/vcpkg
+            ~/.cache/vcpkg/archives
+          key: ${{ runner.os }}-vcpkg
+          restore-keys: |
+            ${{ runner.os }}-vcpkg
+
       - name: Install Ninja
         run: sudo apt-get install -y ninja-build
 
